zno-macro-draft/tests/zno/ui/err/012-optional-is-unknown-ident.stderr
error: unknown option
 --> tests/zno/ui/err/012-optional-is-unknown-ident.rs:3:21
  |
3 | #[zno(name = "a", some_unknown = true)]
  |                     ^^^^^^^^^^^^
