zno-macro-draft/tests/zno/ui/err/012-optional-is-unknown-ident.rs
use zno::zno;

#[zno(name = "a", some_unknown = true)]
fn f() {}

fn main() {
    f();
}
